--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>PictureBook</title>
-<!--
-  <%= stylesheet_link_tag    "application" %> -->
+
+  <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
 
   <%= csrf_meta_tags %>
